# intro_to_yew

./: Cargo.toml  README.md  index.html
src/: lib.rs  main.rs  router.rs
src/components/: mod.rs
src/components/common_all/: main_title.rs
src/components/helpers/: buttons.rs  mod.rs  text_input.rs
src/components/page_components/: form.rs
src/static/: style.css
