[package]
name = "intro_to_yew"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.2.0"
stylist = { version = "0.10.0", features = ["yew"] }
gloo = "0.6.1"
wasm-bindgen = "0.2.79"
web-sys = { version = "0.3.51", features = ["HtmlInputElement"] }
yew-router = "0.17.0"