[package]
name = "intro_to_yew"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = {version = "0.20.0", features = ["csr"] }
gloo = "0.8.0"
serde = {version = "1.0.152", features = ["derive"]}
serde_json = "1.0.93"
stylist = { version = "0.12.0", features = ["yew"] } # for styling
wasm-bindgen = "0.2.84"
web-sys = { version = "0.3.55", features = ["HtmlInputElement"] }